--- a/index.html
+++ b/index.html
@@ -24,24 +24,32 @@
         </div>
     </header>
 
-    <main id="content"></main>
+    <div #main-content>
+        <main id="content"></main>
 
-    <section id="sponsorship">
-        <label id="sponsorship-title"></label>
-        <ul class="sponsors">
-            <li><a class="sponsor" href="https://www.opolskie.pl/" target="_blank">
-                <img alt="Marszałek Województwa Opole" src="./images/marszalek-opole-dark.png">
-            </a></li>
-            <li><a class="sponsor" href="https://www.opole.pl/dla-mieszkanca" target="_blank">
-                <img alt="Miasto Opole" src="./images/logo-opole-dark.png">
-            </a></li>
-            <li><a class="sponsor" href="https://www.gov.pl/web/sport/" target="_blank">
-                <img alt="Ministerstwo sportu i turystyki" src="./images/logo-sport_and_turism.png">
-            </a></li>
-        </ul>
-    </section>
+        <section id="sponsorship">
+            <label id="sponsorship-title"></label>
+            <ul class="sponsors">
+                <li><a class="sponsor" href="https://www.opolskie.pl/" target="_blank">
+                    <img alt="Marszałek Województwa Opole" src="./images/marszalek-opole-dark.png">
+                </a></li>
+                <li><a class="sponsor" href="https://www.opole.pl/dla-mieszkanca" target="_blank">
+                    <img alt="Miasto Opole" src="./images/logo-opole-dark.png">
+                </a></li>
+                <li><a class="sponsor" href="https://www.gov.pl/web/sport/" target="_blank">
+                    <img alt="Ministerstwo sportu i turystyki" src="./images/logo-sport_and_turism.png">
+                </a></li>
+            </ul>
+        </section>
+    </div>
 
     <footer>
+        <div class="social-links">
+            <a class="social-links__item" href="https://www.instagram.com/domini_gimnastyka/" target="_blank"><img src="./images/instagram.png", alt="Instagram" class="social-links__item__img"></a>
+            <a class="social-links__item" href="https://www.facebook.com/dominiszkolagimnastyki" target="_blank"><img src="./images/facebook.png", alt="Facebook" class="social-links__item__img"></a>
+            <a class="social-links__item" href="https://wa.me/513307276" target="_blank"><img src="./images/whatsApp.png", alt="WhatsApp" class="social-links__item__img"></a>
+            <a class="social-links__item" href="tel:513307276" target="_blank"><img src="./images/call.png", alt="Phone number" class="social-links__item__img"></a>
+        </div>
         <p>COPYRIGHT 2025 &copy; Domini Gimnastyka</p>
     </footer>
 
