refactored main page and styles

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </header>
 
-    <div #main-content>
+    <div id="main-content">
         <main id="content"></main>
 
         <section id="sponsorship">
